hphp/hack/test/typecheck/is_expression/merge_is_good.php.like_types.exp
File "merge_is_good.php", line 13, characters 27-29:
Invalid argument (Typing[4110])
File "printf.hhi", line 133, characters 30-56:
Expected ~HH\FormatString<~PlainSprintf> because it is an unenforceable type
File "merge_is_good.php", line 13, characters 27-29:
But got string
